--- a/css/custom.css
+++ b/css/custom.css
@@ -156,5 +156,33 @@ a:hover {
 	max-height: 90%;
 	margin-top: 5%;
 	background-attachment: cover;
+	display: block;
+	width: 100%;
 }
 
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-heigth: 90%;
+  max-width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: white;
+}
+
+.portfolio-item:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
